# serializer version: 1
# name: test_entities[cover.cover-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.cover',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'dimmable cover',
    'platform': 'niko_home_control',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01JFN93M7KRA38V5AMPCJ2JYYV-2',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[cover.cover-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 255,
      'color_mode': <ColorMode.BRIGHTNESS: 'brightness'>,
      'friendly_name': 'dimmable cover',
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      'supported_features': <CoverEntityFeature: 255>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.cover',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_entities[cover.cover-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.cover',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'cover',
    'platform': 'niko_home_control',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01JFN93M7KRA38V5AMPCJ2JYYV-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[cover.cover-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'color_mode': <ColorMode.ONOFF: 'onoff'>,
      'friendly_name': 'cover',
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
      'supported_features': <CoverEntityFeature: 255>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.cover',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---